Fixed bug where content that was fading in would overlap the header. Started work on a contact form.

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ html, body {
 header {
   position: fixed;
   top: 0;
+  z-index: 1;
   width: 100%;
   height: 136px;
 }
@@ -106,6 +107,7 @@ h1 {
   padding: 10px;
   word-break: break-word;
   border: solid #0090C1 5px;
+  border-radius: 1em;
 }
 .quote-left-wrapper {
   display: flex;
@@ -124,9 +126,9 @@ h1 {
 .testimonial-line {
   margin: auto;
   height: 0px;
-  width: 50%;
+  width: 33.33%;
   flex-basis: 100%;
-  border-bottom: solid #0090C1 5px;
+  border-bottom: solid #F4B942 3px;
 }
 #testimonials {
   min-height: 100vh;
@@ -151,7 +153,26 @@ h1 {
 
 /* contact */
 
+.contact-form-element {
+}
 #contact {
+}
+#contact-form {
+  display: flex;
+  justify-content: center;
+  margin: 5px auto;
+  padding: 10px 0 10px 0;
+  width: 33.33%;
+  border: solid #0090C1 5px;
+  border-radius: 1em;
+}
+#form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#contact-form-button {
+  align-self: center;
 }
 
 /* footer */
